--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 :root{
     --primary-color: #F6F6F6;
+    --secondary-color: #8F72E3;
     --sidebar: darkgrey;
+    --input-box : #E5E5E5;
     --rectangle: #1E1E1E;
     --font: #1E1E1E;
-    --secondary-color: #8F72E3;
+    --font_2 : white;
     --shadow: rgba(14, 14, 14, 0.4);
     --title : 4rem;
     --text : 2rem;
@@ -11,10 +13,12 @@
 
 [data-theme='dark'] {
     --primary-color : #1E1E1E;
+    --secondary-color : #8F72E3;
+    --input-box : #E5E5E5;
     --sidebar : darkgrey;
     --rectangle : #101010;
     --font : white;
-    --secondary-color : #8F72E3;
+    --font_2 : white;
     --shadow : rgb(0, 0, 0);
     --title : 4vw;
     --text : 1.5vw;
@@ -50,56 +54,67 @@ html,body{
 .main{
     position: relative;
     /* background-color: yellowgreen; */
-    margin: 5%;
+    margin: 8%;
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     flex-direction: column;
-    gap: 10rem;
+    gap: 20rem;
 
 }
 
-h2{
-    /* color: linear-gradient(#8F72E3, black); */
-    font-size: 3vw;
-    margin-bottom: 0;
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+    padding: 0;
+}
+
+h1 {
+    color: var(--font);
+    margin: 0 5%;
+    font-size: 2.5rem;
+}
+
+h2 {
+    font-size: 3rem;
     line-height: 1;
-    font-size: 3vw;
-    margin-top: 0;
 }
 
-h3{
+h3 {
     background: linear-gradient(to right, #8F72E3 0%, #8F72E3 13%, black 10%, black 100%);
     background-clip: text;
     color: transparent;
     font-size: 3vw;
-    margin-bottom: 0;
-    line-height: 1;
     width: 35vw;
 }
 
-h4{
-    /* background-color: bisque; */
+h4, h5 {
     color: var(--font);
-    margin: 0;
-    font-size: var(--text);
     font-weight: 200;
-    /* padding-left: .5rem; */
 }
 
-h5{
-    color: var(--font);
+h4 {
+    font-size: var(--text);
+}
+
+h5 {
     font-size: 1vw;
     font-weight: 100;
-    margin: 0;
-    /* padding-left: .5rem; */
 }
 
-p{
+h6 {
     color: var(--font);
-    font-size: 1vw;
+    font-size: .7rem;
+    width: 10rem;
+    margin: 0 5%;
+    line-height: 1;
+    font-weight: 300;
+}
+
+p {
+    color: var(--font_2);
+    font-size: 1rem;
+    /* line-height: 1; */
     font-weight: lighter;
 }
-
 
 /* Hero Section: Includes Image and a text Body */
 
@@ -115,7 +130,7 @@ p{
 .static_image{
     /* background-color: red; */
     display: flex;
-    height: 20rem;
+    height: 50rem;
     min-width: 40%;
     position: relative;
     /* padding: 2rem; */
@@ -136,14 +151,14 @@ p{
 .text_body{
     padding: 2%;
     /* background-color: salmon; */
-    align-self: flex-end;
+    align-self: center;
 }
 
 .text{
     /* background-color: green; */
     position: relative;
     width: 30rem;
-    display: flex-end;
+    /* display: flex-end; */
     flex-direction: column;
 }
 
@@ -169,11 +184,18 @@ p{
     font-size: 1.4rem;
     text-align: start;
     max-width: 40rem;
-
+    gap: 1;
     align-self: center;
     color: var(--font);
     font-size: var(--text);
     font-weight: 200;
+}
+
+.moral img{
+    display: flex;
+    width: 4rem;
+    box-shadow: 0rem 0rem .2rem 0.0rem var(--shadow);
+    border-radius: 100%;
 }
 
 .groups{
@@ -199,7 +221,7 @@ p{
     /* justify-content: space-between; */
 }
 
-.container img{
+.groups img{
     position: relative;
     background-color: var(--rectangle);
     padding: 1rem;
@@ -219,14 +241,19 @@ p{
     justify-content: space-between;
 }
 
+.provision_left{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    width: 80rem;
+    align-self: center;
+}
+
 .header{
     /* margin-bottom: 2%; */
     /* background-color: blue; */
-    width: 80rem;
-    align-self: center;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
 }
 
 .categories{
@@ -253,16 +280,19 @@ p{
     transition: .2s ease-in-out;
 }
 
+.right_column{
+    position: relative;
+}
+
 .detail{
     /* margin: 5%; */
     position: relative;
     /* padding: 1rem; */
-    width : 100%;
+    width: 50rem;
     height : 40rem ;
-    border-radius: 20rem;
+    border-radius: 1rem;
     box-shadow: 0rem 0rem 1rem .1rem var(--shadow);
 }
-
 
 .gradient{
     position: absolute;
@@ -279,27 +309,29 @@ p{
 }
 
 .description{
-    align-items: center;
-    vertical-align: middle;
     position: absolute;
     z-index: 1;
-    top: 0%;
-    padding: 2rem;
-    width: 40vw;
-    /* background-color: black; */
+    padding: 3rem;
+    width: 30rem;
+
 }
-.description h3{
-    width: 50rem;
-    line-height: 1;
-    
+.description p{
+    color: rgba(255, 255, 255, 0);
+    transition: .5s ease-in-out;
+}
+.description p:hover{
+    transition: .5s ease-in-out;
+    border-top-left-radius: 1rem;
+    color: var(--primary-color);
+    transition: .5s ease-in-out;
 }
 
 .carous{
     z-index: 50;
     position: absolute;
-    top: 70%;
-    height: 8rem;
-    left: 3%;
+    top: 80%;
+    height: 6rem;
+    left: 5%;
     /* background-color: red; */
     display: flex;
     justify-content: flex-start;
@@ -310,4 +342,74 @@ p{
 .carous img{
     object-fit: cover;
     overflow: hidden;
+}
+
+/* Contact Us Section */
+
+.contact{
+    display: flex;
+    /* background-color: red; */
+    justify-content: space-between;
+}
+
+.contact_left{
+    display: flex;
+    flex-direction: column;
+    /* background-color: red; */
+    justify-content: center;
+    gap: 5rem;
+}
+.urlocation{
+    display: flex;
+    flex-direction: column;
+    font-weight: 200;
+}
+
+
+.contact_right{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: var(--primary-color);
+    width: 40rem;
+    border-radius: 1rem;
+    padding: 3rem;
+    margin: 2rem;
+    box-shadow: 0rem 0rem .2rem 0.0rem var(--shadow);
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: .8vw;
+    font-weight: 200;
+    /* gap: .5rem; */
+}
+
+label{
+    display: flex;
+    margin-top: .5rem;
+}
+
+input, textarea{
+    padding: 1rem;
+    border-radius: .5rem;
+    background-color: var(--input-box);
+    margin-top: .5rem;
+    border: none;
+}
+
+
+button{
+    margin-top: 1rem;
+    background-color: var(--secondary-color);
+    font-size: 1vw;
+    border: none;
+    color: var(--primary-color);
+    padding: .8rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    width: auto;
+    align-self: flex-start;
 }
